[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Art/The Sun.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/Light.png" type="Texture" id=2]
[ext_resource path="res://Scene_elements/SunArea2D.gd" type="Script" id=3]
[ext_resource path="res://Scene_elements/TheSun.gd" type="Script" id=4]
[ext_resource path="res://Assets/Music/Gutiar.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 2, 0.9, 0.9, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.4, 0.4, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 2, 2, 2, 1 ), Color( 1, 1, 1, 1 ), Color( 2, 0.3, 0.3, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 35.0571

[node name="TheSun" type="Sprite"]
position = Vector2( -53, -71 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
color = Color( 0.964706, 0.792157, 0, 1 )
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 1 )

[node name="SunArea2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SunArea2D"]
shape = SubResource( 4 )

[node name="SunTimer" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true
max_distance = 4000.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="sun_clicked" from="SunArea2D" to="." method="_on_SunArea2D_sun_clicked"]
